--- a/appproject/accounts/templates/accounts/karihome.html
+++ b/appproject/accounts/templates/accounts/karihome.html
@@ -253,7 +253,7 @@
         </div>
 
         <!-- キャラクターウィジェット（karihomeモード） -->
-        <div style="grid-column: 3 / 4; grid-row: 1 / 4; position: relative;">
+        <div style="grid-column: 3 / 4; grid-row: 1 / 4; position: relative; margin-left: 50px;">
             {% load accessory_filters %}
             {% include 'includes/character_widget.html' with mode='karihome' %}
         </div>
